--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
   "cSpell.words": [
-    "Rupeee"
+    "CGPA",
+    "Chameli",
+    "Madhya",
+    "Mandir",
+    "Pallotti",
+    "Pradesh",
+    "Proudyogiki",
+    "Rajiv",
+    "Rupeee",
+    "Vinay",
+    "Vishwavidyalaya"
   ]
 }
